This is ChangeLog
Thu Sep 10 12:33:22 UTC 2009


rxtx-2.1 and rxtx-2.0 changes are kept in the same file.  skip to the version
you downloaded.

2.2 ???
		Fix build on Linux systems without UTS_RELEASE (linux/utsrelease.h)
		Ilkka Myller <ilkka@myller.com>
		http://mailman.qbang.org/pipermail/rxtx/2009-September/4816749.html
	
		Apple Xcode 3.x project
		Ilkka Myller <ilkka@myller.com>
		http://mailman.qbang.org/pipermail/rxtx/2009-September/4811084.html
		
		YACK() debug overflow fix for windows
		Steffen DETTMER <Steffen.DETTMER@ingenico.com>

		Multiport fix for Windows
		Ilkka Myller <ilkka@myller.com>
		http://mailman.qbang.org/pipermail/rxtx/2009-February/3989441.html

		Fix for SIGSEGV at SerialImp.c Solaris/mac/*bsd
		Ilkka Myller <ilkka@myller.com> 
		http://mailman.qbang.org/pipermail/rxtx/2009-February/4810504.html

		Let people know which port is in use on windows.
		WriteFile fix for Parallel ports on windows.
		Johnny Luong <johnny.luong@trustcommerce.com>

		Solaris static libgcc link configure fix.

		64 bit JNI Fixes  <dan.sandberg.lists@gmail.com>
		Dan Sandberg
		http://mailman.qbang.org/pipermail/rxtx/2007-June/3676251.html

	 	Maintain DTR=false during setSerialPortParams	
		Beat Arnet <beat.arnet@gmail.com>
		http://mailman.qbang.org/pipermail/rxtx/2009-January/3682508.html
		http://bugzilla.qbang.org/show_bug.cgi?id=104
		
		Avoid debug sprintf overflows on win32.
		http://mailman.qbang.org/pipermail/rxtx/2009-January/3682496.html
		Luis Pires <lpdev@ruabrasil.org>

		disable dcb.fDtrControl to avoid unexpected behavior.
		Beat Arnet <beat.arnet@gmail.com>
		http://bugzilla.qbang.org/show_bug.cgi?id=104

		threshold fix
		Alexandre Rusev <cyberflex@mail.ru>
		http://bugzilla.qbang.org/show_bug.cgi?id=85

                RXTX close deadlocks in REXTXPort.finalize
		Joachim Buechse <joachim@buechse.de>
		http://bugzilla.qbang.org/show_bug.cgi?id=53

		Add ACM serial devices to all known ports.
		Duncan Pierce <duncan.pierce@syntropy.co.uk>