@@ -919,11 +919,7 @@ void throw_java_exception_system_msg( JNIEnv *env, char *exc, char *foo )
 ----------------------------------------------------------*/
 void report_error(char *msg)
 {
-#ifndef DEBUG_MW
-	fprintf(stderr, msg);
-#else
-	mexWarnMsgTxt( msg );
-#endif /* DEBUG_MW */
+	fprintf(stderr, "%s", msg);
 }
 
 /*----------------------------------------------------------
@@ -938,7 +934,7 @@ void report_error(char *msg)
 void report(char *msg)
 {
 #ifdef DEBUG
-        fprintf(stderr, msg);
+        fprintf(stderr, "%s", msg);
 #endif /* DEBUG */
 }
 
